--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "gluegun": "next"
   },
   "devDependencies": {
-    "standard": "^12.0.1",
+    "jest": "^23.6.0",
     "prettier": "^1.12.1",
-    "jest": "^23.6.0"
+    "standard": "^12.0.1",
+    "testdouble": "^3.9.1",
+    "testdouble-jest": "^2.0.0"
   },
   "jest": {
     "testEnvironment": "node",
